--- a/packages/SystemUI/res/layout/system_icons.xml
+++ b/packages/SystemUI/res/layout/system_icons.xml
@@ -26,6 +26,15 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"/>
 
+    <com.android.systemui.statusbar.policy.Traffic
+            android:id="@+id/traffic"
+            android:textAppearance="@style/TextAppearance.StatusBar.Traffic"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:singleLine="true"
+            android:layout_marginStart="2.5dp"
+            android:gravity="left|center_vertical"/>
+
     <include layout="@layout/signal_cluster_view"
         android:id="@+id/signal_cluster"
         android:layout_width="wrap_content"
