--- a/packages/SystemUI/res/layout/system_icons.xml
+++ b/packages/SystemUI/res/layout/system_icons.xml
@@ -37,8 +37,8 @@
 
     <com.android.systemui.statusbar.policy.NetworkMeterView
         android:id="@+id/network_meter"
-        android:layout_width="35dp"
-        android:layout_height="14.5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="2.5dp"/>
 
     <include layout="@layout/signal_cluster_view"
